# Kyra

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
site/: index.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  monitor.rs  settings.rs  shared.rs  utils.rs
src-tauri/src/commands/analyzer/: cache.rs  mod.rs  scanner.rs
src-tauri/src/commands/cleaner/: executor.rs  mod.rs  rules.rs  scanner.rs
src-tauri/src/commands/installers/: mod.rs  remover.rs  scanner.rs
src-tauri/src/commands/optimizer/: mod.rs  runner.rs  tasks.rs
src-tauri/src/commands/pruner/: mod.rs  remover.rs  scanner.rs
src-tauri/src/commands/purger/: mod.rs  remover.rs  scanner.rs
src-tauri/src/commands/uninstaller/: associated.rs  brew.rs  discovery.rs  mod.rs  remover.rs
src/components/: AccentBar.tsx  ArcGauge.tsx  AskAiCoachMark.tsx  BrandIcon.tsx  DeleteConfirmDialog.tsx  DemoPlayer.tsx  ErrorBoundary.tsx  FdaMockup.tsx  FdaPrompt.tsx  ModuleCard.tsx  NetworkGraph.tsx  Sunburst.tsx  SystemStrip.tsx  TitleBar.tsx  Toast.tsx  Treemap.tsx
src/data/: brand-icons.json
src/lib/: tauri.ts
src/pages/: Analyze.tsx  Clean.tsx  Home.tsx  Installers.tsx  ModulePlaceholder.tsx  Onboarding.tsx  Optimize.tsx  Prune.tsx  Purge.tsx  Settings.tsx  Status.tsx  Uninstall.tsx
src/stores/: analyzeStore.ts  cleanStore.ts  installersStore.ts  navigationStore.ts  optimizeStore.ts  pruneStore.ts  purgeStore.ts  (+4 more)
(+18 files in other folders)
