[package]
name = "kyra"
version = "0.1.0"
edition = "2021"

[lib]
name = "kyra_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
dirs = "6"
plist = "1"
