[package]
name = "kyra"
version = "0.2.0"
edition = "2021"

[lib]
name = "kyra_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
dirs = "6"
tokio = { version = "1", features = ["time"] }
plist = "1"
trash = "5"
base64 = "0.22.1"
objc2 = "0.6.4"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
